# Enterprise-Application-Forensics-Toolkit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-publish.yml
cpp/: CMakeLists.txt
cpp/resources/: resources.rc
cpp/src/: analysis.h  gui.cpp  main.cpp
docs/: cpp-port-investigation.md
tests/: test_toolkit.py
toolkit/: __init__.py  analysis.py  cli.py
