[project]
name = "enterprise-application-forensics-toolkit"
version = "0.1.0"
description = "Toolkit voor installatiesanalyse, dependency scanning en Intune/MSIX-evaluatie."
authors = ["Enterprise Forensics <noreply@example.com>"]
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
toolkit = "toolkit.cli:main"

[project.optional-dependencies]
ui = ["rich"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
